Video capture and implementation to graphics view is added

--- a/Qt_OpenCV.vcxproj
+++ b/Qt_OpenCV.vcxproj
@@ -101,6 +101,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\VideoWindow.cpp" />
     <QtRcc Include="Qt_OpenCV.qrc" />
     <QtUic Include="Qt_OpenCV.ui">
       <SubType>Designer</SubType>
@@ -111,6 +112,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="Header\VideoWindow.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
