add thread signal and slot system but frame is return null

--- a/Qt_OpenCV.vcxproj.filters
+++ b/Qt_OpenCV.vcxproj.filters
@@ -43,12 +43,24 @@
     <ClCompile Include="Source\VideoWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\ThreadWorker.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\VideoProcessor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="Header\VideoWindow.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="Header\ThreadWorker.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="Header\VideoProcessor.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
